--- a/app/views/prog_exits/edit.html.erb
+++ b/app/views/prog_exits/edit.html.erb
@@ -26,13 +26,8 @@
 		</tr>
 
 		<tr>
-			<th>
-				Exit Date:
-			</th>
-			<td>
-				<%= @exit.ExitDate.strftime("%m/%d/%Y") %>
-			</td>
-
+			<th><%= f.label(:ExitDate, "Exit Date:")%></th>
+			<td><%= f.text_area(:ExitDate) %></td>
 		</tr>
 
 		<tr>
