finish feature and tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
 	          <% end -%>
       	<% end %>
       </div>
-      
+
       <div class="col-xs-12 col-md-3 col-md-offset-6">
         <p class="navbar-text pull-right">
           Welcome, <%= "#{session[:user]} (#{session[:role]})" %>
@@ -73,6 +73,7 @@
 </div>
 
 		<!--Before yield -->
+      <%= render :partial => "downtimes" %>
 
       <% if !flash[:notice].blank? %>
         <div class="notice">
