--- a/app/views/prog_exits/edit.html.erb
+++ b/app/views/prog_exits/edit.html.erb
@@ -18,16 +18,28 @@
 
 		<tr>
 			<th>
-				Exit Reason:
+				<%= f.label :ExitCode_ExitCode, "Exit Reason:" %>
 			</th>
 			<td>
-				<%= @exit.exit_code.ExitDiscrip %>
+				<%= f.select :ExitCode_ExitCode, options_for_select(@exit_reasons.collect { |er| [er.ExitDiscrip, er.id]})  %>
 			</td>
 		</tr>
 
+
 		<tr>
-			<th><%= f.label(:ExitDate, "Exit Date:")%></th>
-			<td><%= f.text_area(:ExitDate) %></td>
+			<th>
+				<%= f.label :ExitDate, "Exit Date:" %>
+			</th>
+
+            <td class="date-admit">
+
+
+				<%= render(partial: 'date_picker', :locals => {
+					f: f,
+					field: :ExitDate,
+					default: @exit.ExitDate ? (@exit.ExitDate) : ""
+				} )%>
+            </td>
 		</tr>
 
 		<tr>
@@ -53,7 +65,6 @@
 			<td>
 				<%= f.text_area(:Details, :side => '40x10') %>
 			</td>
-
 		</tr>
 
 	<tr>
