--- a/app/views/prog_exits/new.html.erb
+++ b/app/views/prog_exits/new.html.erb
@@ -1,5 +1,16 @@
 <%= link_to prog_exits_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
-<%= render(partial: 'new_form') %>
+
+    <div>
+        <caption>
+    	    <span class="header1"> Exit a student</span>
+        </caption>
+
+        <%= render(partial: 'form') %>
+
+        <tr>
+	        <td><%= submit_tag("Submit Exit") %></td>
+        </tr>
+    </div>
 
