--- a/app/views/clinical_assignments/_form.html.erb
+++ b/app/views/clinical_assignments/_form.html.erb
@@ -9,7 +9,7 @@
 
     <tr>
       <th> <%= f.label(:clinical_teacher_id, "Teacher:")%> </th>
-      <td> <%= f.select(:clinical_teacher_id, @teachers.map {|t| ["#{t.FirstName} #{t.LastName}", t.id]},
+      <td> <%= f.select(:clinical_teacher_id, @teachers.map {|t| ["#{t.LastName}, #{t.FirstName}", t.id]},
       {prompt: "Select a clinical teacher"}) %></td>
     </tr>
 
