Revert "Changed _new_form to _form and refactored. edited prog_exit edit so that exitdate, comp date, and reason can be edited"
This reverts commit fcac84b92dbaa7f1b2fea52e73032d8f9f7323cc.

--- a/app/views/prog_exits/new.html.erb
+++ b/app/views/prog_exits/new.html.erb
@@ -1,16 +1,5 @@
 <%= link_to prog_exits_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
-
-    <div>
-        <caption>
-    	    <span class="header1"> Exit a student</span>
-        </caption>
-
-        <%= render(partial: 'form') %>
-
-        <tr>
-	        <td><%= submit_tag("Submit Exit") %></td>
-        </tr>
-    </div>
+<%= render(partial: 'new_form') %>
 
