--- a/app/views/prog_exits/_new_form.html.erb
+++ b/app/views/prog_exits/_new_form.html.erb
@@ -3,7 +3,9 @@
 <%= form_for @exit, url: prog_exits_path do |f|   %>
 	<table summary="prog_exit form fields" class="new">
 
-
+    <caption>
+    	<span class="header1"> Exit a student</span>
+    </caption>
 
 		<%= error_messages_for(@exit) %>
 
@@ -23,7 +25,7 @@
 		<tr>
 		  <th> <%= f.label :Program_ProgCode, "Program to Exit:", :class => 'programs_row'  %> </th>
 		  <td>
-		  	<%= f.select :Program_ProgCode, options_for_select([]), {}, {prompt: "Select a Program to Exit", id: 'programs_select', :class => 'programs_row'} %>
+		  <%= f.select :Program_ProgCode, options_for_select([]), {}, {prompt: "Select a Program to Exit", id: 'programs_select', :class => 'programs_row'} %>
 		  </td>
 		</tr>
 
@@ -69,7 +71,7 @@
 
 		<tr>
 			<th>
-				<%= f.label :Details, "Details:" %>
+				<%= f.label :Details %>
 			</th>
 
 			<td>
@@ -77,5 +79,7 @@
 			</td>
 
 		</tr>
-
+	<tr>
+		<td><%= submit_tag("Submit Exit") %></td>
+	</tr>
 <% end %>
