--- a/app/views/clinical_assignments/_form.html.erb
+++ b/app/views/clinical_assignments/_form.html.erb
@@ -9,7 +9,7 @@
 
     <tr>
       <th> <%= f.label(:clinical_teacher_id, "Teacher:")%> </th>
-      <td> <%= f.select(:clinical_teacher_id, @teachers.map{|t| [t.clinical_teacher_name_details(file_as = true), t.id]},
+      <td> <%= f.select(:clinical_teacher_id, @teachers.map{|t| [t.name_readable(file_as = true), t.id]},
       {prompt: "Select a clinical teacher"}, id: "clinical_teacher_select") %></td>
     </tr>
 
