--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -10,7 +10,7 @@
     <table summary="adm_tep form fields">
 
         <tr>
-            <th><%= f.label(:TEPAdmit, "Admission Decision", ) %></th>
+            <th><%= f.label(:TEPAdmit, "Admission Decision:", ) %></th>
 
             <td><%= f.select(:TEPAdmit,
                         {"Admitted" =>  true, "Not Admitted" => false},
@@ -20,7 +20,7 @@
 
         <tr>
         <th>
-            <%= f.label(:TEPAdmitDate, "Admit Date") %></th>
+            <%= f.label(:TEPAdmitDate, "Admit Date:") %></th>
 
             <td>
 
@@ -33,7 +33,7 @@
 
 
              <tr>
-              <th><%= f.label(:Notes, "Comments") %></th>
+              <th><%= f.label(:Notes, "Comments:") %></th>
               <td><%= f.text_area(:Notes, :side => '40x10') %></td>
             </tr>
 
