--- a/app/views/adm_st/index.html.erb
+++ b/app/views/adm_st/index.html.erb
@@ -106,27 +106,18 @@
 
                 <%= link_to("Edit", adm_st_edit_st_paperwork_path(app.id) , :class => "action details btn btn-info action-small") %>
 
-                <% if app.student_file %>
-
-                  <%= link_to adm_st_download_path(app.id), :class => "btn btn-default glyphicon glyphicon-file action-small" do %>
-                  <% end %>
-
-                <% else %>
-
-                  <%= link_to "#", :class => "btn btn-default glyphicon glyphicon-file action-small disabled glyph-only" do %>
-                <% end %>
-
-                <%# button_to("delete", :action => 'delete', :class => "btn btn-default glyphicon glyphicon-trash action-small") do %>
-
-                <%# end %>
-                  <!-- ST paperwork goes here -->
-
-              <% end %>
             </td>
             <td>
                 <%= button_to(adm_st_path(app.id), { class: "btn btn-default #{app.STAdmitted==nil ? "" : "disabled" }", method: :delete, data: {confirm: "Are you sure you want to delete this application?"}} ) do %>
                      <span class="glyphicon glyphicon-trash" ></span>
                 <% end %>
+            </td>
+
+            <td>
+                <%= render(partial: "links_popover", :locals => {
+                                :app => app
+                            }
+                        ) %>
             </td>
           </tr>
         <!-- end of if statement for content-->
