--- a/app/views/clinical_sites/index.html.erb
+++ b/app/views/clinical_sites/index.html.erb
@@ -23,11 +23,6 @@
       <th>City</th>
       <th>County</th>
       <th>District</th>
-      <th>Principal</th>
-      <th>Phone</th>
-      <th>Receptionist</th>
-      <th>Website</th>
-      <th>Email</th>
     </tr>
     <% @sites.each do |site| %>
       <% if can? :read, site %>
@@ -35,17 +30,14 @@
         <td><%= site.City %></td>
         <td><%= site.County %></td>
         <td><%= site.District %> </td>
-        <td><%= site.Principal %></td>
-        <td><%= site.phone %></td>
-        <td><%= site.receptionist %></td>
-        <td><%= link_to(site.website, site.website)%></td>
-        <td> <%= mail_to(site.email, site.email) %> </td>
         <td class="actions">
 
           <!-- actions:
              see teachers
              edit school-->
-
+            <%= link_to clinical_site_path(site.id), :class => "btn btn-info action-small" do %>
+                  <span class="small-btn-text">Details</span>
+                <% end %>
         <!-- edit school  -->
             <%= link_to edit_clinical_site_path(site.id), :class => "btn btn-info action-small" do %>
                   <span class="small-btn-text">Edit</span>
@@ -54,14 +46,15 @@
          <!-- see teachers -->
             <%= link_to clinical_site_clinical_teachers_path(site.id), :class => "btn btn-info action-small " + (site.clinical_teachers.size > 0 ? "" : " disabled") do %>
                   <span class="small-btn-text">Teachers
-                    <span class="badge"> <%= site.clinical_teachers.size%></span>
+                    <span class="badge"><%= site.clinical_teachers.size%></span>
                   </span>
                 <% end %>
-                
-            <%= link_to(clinical_site_delete_path(site.id), :class => "btn btn-default") do %>  
+            <td>
+              <%= button_to(clinical_site_path(site.id), {class: "btn btn-default", method: :delete,
+                data: {confirm: "Are you sure you want to delete this clinical site?"}})do %>  
                 <span class="glyphicon glyphicon-trash"></span>
-                <% end %>  
-
+                  <% end %>  
+            </td>  
           </td>
           
         </tr>
