--- a/app/views/clinical_sites/index.html.erb
+++ b/app/views/clinical_sites/index.html.erb
@@ -31,35 +31,35 @@
         <td><%= site.County %></td>
         <td><%= site.District %> </td>
         <td class="actions">
-
-          <!-- actions:
-             details
-             index teachers
-             edit school
-          -->
+          
+          <!-- available actions populated here -->
           <%= render :partial => "details_popover", :locals => {
-              :site => site
+            :site => site
             } 
           %> 
           
-        <!-- edit school  -->
-            <%= link_to edit_clinical_site_path(site.id), :class => "btn btn-info action-small" do %>
-                  <span class="small-btn-text">Edit</span>
-                <% end %>
-
-         <!-- see teachers -->
-            <%= link_to clinical_site_clinical_teachers_path(site.id), :class => "btn btn-info action-small " + (site.clinical_teachers.size > 0 ? "" : " disabled") do %>
-                  <span class="small-btn-text">Teachers
-                    <span class="badge"><%= site.clinical_teachers.size%></span>
-                  </span>
-                <% end %>
-            <td>
-              <%= button_to(clinical_site_path(site.id), {class: "btn btn-default", method: :delete,
-                data: {confirm: "Are you sure you want to delete this clinical site?"}})do %>  
-                <span class="glyphicon glyphicon-trash"></span>
-                  <% end %>  
-            </td>  
-          </td>
+          <%= button_to(clinical_site_path(site.id), {class: "btn btn-default", method: :delete,
+            data: {confirm: "Are you sure you want to delete this clinical site?"}})do %>  
+            <span class="glyphicon glyphicon-trash"></span>
+          <% end %>  
+          
+          <div class="dropdown clinical_sites-actions-menu">
+            <button id= <%= "clinical_site-actions-menu-#{site.id}" %>
+              class="btn btn-primary dropdown-toggle"
+              type="button" data-toggle="dropdown">
+              Actions
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to("Clinical Teachers, (#{site.clinical_teachers.size})", clinical_site_clinical_teachers_path(site.id)) %>
+              </li>
+              <li>
+                <%= link_to( "Edit", edit_clinical_site_path(site.id)) %>
+              </li>
+            </ul>
+          </div> <!-- end of dropdown -->
+        </td>
           
         </tr>
       <% end %>
