--- a/app/views/clinical_sites/_details_popover.html.erb
+++ b/app/views/clinical_sites/_details_popover.html.erb
@@ -6,7 +6,7 @@
 
 
   <!-- Button trigger modal -->
-  <button class="btn btn-info action-small" data-toggle="modal" data-target="#record-<%= site.id %>-details">
+  <button class="btn btn-info btn-block action-small" data-toggle="modal" data-target="#record-<%= site.id %>-details">
     <span>Details</span>
   </button>
 
