--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -1,6 +1,6 @@
 
 <div class="navbar-header">
-  <span class="navbar-brand">Education Studies Dashboard</span>
+  <span class="navbar-text">Education Studies Dashboard</span>
 </div>
 <ul class="nav navbar-nav">
   <li class="active"><%= link_to("Students & Advisees", students_path) %></li>
