--- a/app/views/application/_downtimes.html.haml
+++ b/app/views/application/_downtimes.html.haml
@@ -1,9 +1,9 @@
 - if Downtime.has_impending?
     .alert.alert-danger
         %p
-            = "The Dashboard will go down for maintiance momentarily. Any work submitted might not be saved!"
+            = "The Dashboard will go down for maintenance momentarily. Any work submitted might not be saved!"
 
 - Downtime.all.active.where("start_time > ?", DateTime.now).each do |downtime|
     .alert.alert-warning
         %p
-            = "The Dashboard will be down for maintiance between #{downtime.time_range}"
+            = "The Dashboard will be down for maintenance between #{downtime.time_range}"
