--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -44,6 +44,7 @@
               <th> Sufficient GPA</th>
               <th>Sufficient Credits</th>
               <th>Praxis Pass</th>
+              <th> Foundational Courses </th>
               <th>Admit Date</th>
               <th>Admission Decision</th>
 
@@ -83,7 +84,17 @@
 
           <% end %>
 
-          </td>
+        </td>
+
+        <td>
+
+          <% begin %>
+            <span class="glyphicon glyphicon-<%= app.completed_foundationals? ? "ok": "remove" %>" aria-hidden="true"></span>
+          <% rescue %>
+            <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+          <% end %>
+
+        </td>
         <td><%= app.TEPAdmitDate ? app.TEPAdmitDate.strftime("%m/%d/%Y") : nil%></td>
 
   			<td class="actions">
@@ -111,7 +122,7 @@
               :content => app.Notes,
               } )  %>
         </td>
-        
+
         <td>
             <%= render(partial: "links_popover", :locals => {
                             :app => app
