--- a/app/views/praxis_results/show.html.erb
+++ b/app/views/praxis_results/show.html.erb
@@ -21,7 +21,7 @@
 
     <tr>
       <th>Score</th>
-      <td <%= (@test.test_score and @test.test_score >= @test.cut_score) ? nil : "class=bad_text" "border: solid" %>><%= @test.test_score%></td>
+      <td class="alert alert-<%= @test.passing? ? 'success' : 'danger' %>"><%= @test.test_score%></td>
     </tr>
 
     <tr>
@@ -36,7 +36,7 @@
     
     <tr>
       <th>Registration Date</th>
-      <td><%= @test.reg_date ? @test.reg_date.strftime("%m/%d/%Y") : nil%></td>
+      <td><%= @test.reg_date.andand.strftime("%m/%d/%Y")%></td>
     </tr>
 
     <tr>
@@ -79,4 +79,3 @@
 
 
 </div>
-
