remove verticle_table

--- a/app/views/clinical_sites/_details_popover.html.erb
+++ b/app/views/clinical_sites/_details_popover.html.erb
@@ -20,7 +20,7 @@
           </h4>
         </div>
         <div class="modal-body">
-          <table class="vertical-table">
+          <table class="table">
             
             <tr>
               <th>Principal</th>
