--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -9,7 +9,7 @@
 <div class="students show">
 
 
-  <table class="vertical-table" summary="Student detail view">
+  <table class="table" summary="Student detail view">
   <caption> Student Details</caption>
     <tr>
       <th>B#</th>
