--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,10 @@
 	<head>
 	  <title>Education Studies Dashboard</title>
 
+    <% if browser.ie? %>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.0/bluebird.min.js"></script>
+    <% end %>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -71,21 +75,11 @@
 
   </div>
 </div>
-
-		<!--Before yield -->
-      <%= render :partial => "downtimes" %>
-
-      <% if !flash[:notice].blank? %>
-        <div class="notice">
-          <%= flash[:notice] %>
-        </div>
-      <% end %>
+    
+		<% flash.keys.each do |key|  %>
+			<%= render :partial => "flash", locals: {type: key, msg: flash[key]} %>
+		<% end %>
+			
 <div class="yield">  <%= yield %> </div>
-
-		<!--After yield -->
-
-
-
-
 
 </html>
