move tittitle into popover title
all locals are manditory, this would require all consumers of the partial to pass one in.

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -66,8 +66,7 @@
                       <%= render(partial: 'details_popover',
                       locals: {
                         :record_id => issue.IssueID,
-                        :popover_title => "Issue Details",
-                        :popover_subtitle => "Opened by #{issue.tep_advisor.first_name} #{issue.tep_advisor.last_name}",
+                        :popover_title => "#{issue.Name}, opened by #{issue.tep_advisor.first_name} #{issue.tep_advisor.last_name}",
                         :button_title => "Details",
                         :content => issue.Description,
                       } )  %>
