add draft for view scores by score upload

--- a/app/views/student_scores/index.html.haml
+++ b/app/views/student_scores/index.html.haml
@@ -1,44 +1,29 @@
-%h2 Upload student scores
-
-= form_tag import_student_scores_path, multipart: true do
-  .form-group
-    %label{:for => :file} File
-    = file_field_tag :file, class: "form-control", id: "file"
-  .form-group
-    %label{:for => :format} Input Format
-    = select_tag :format, options_for_select(@format_types), class: "form-control", id: "format"
-
-  .form-group
-    %label{:for => :assessment} Assessment
-    = select_tag :assessment, options_for_select(@assessments), class: "form-control", id: "assessment"
-
-  .form-group
-    = submit_tag "Import CSV"
-
-
 %container
   %row
-    .col-xs-12.col-md-6
+    .col-xs-12
       %table.table.table-striped
         %thead
           %tr
-            %th Uploaded On
-            %th Source
-            %th Status
+            %th Student
+            %th Asssessment
+            %th Item
+            %th Level
+            %th Date
         %tbody
-        - @uploads.each do |upload|
+        - @scores.each do |score|
           %tr
-            %td= upload.created_at.strftime('%m-%e-%y %H:%M:%S')
-            %td= upload.source
-            - if upload.success
-              %td
-                %span.glyphicon.glyphicon-ok
-            - else
-              %td
-                %span.glyphicon.glyphicon-remove
+            %td= score.student.name_readable
+            %td= score.assessment.name
+            %td= score.assessment_item.slug
+            %td= score.item_level.level
             %td
-              = render :partial => 'details_popover', locals: {:record_id => "details-#{upload.id}",
-                :popover_title => "Details",
-                :button_title => "Details",
-                :content => upload.message,
+              = render :partial => 'details_popover', locals: {:record_id => "details-#{score.id}",
+                :popover_title => "Level Description",
+                :button_title => "Level Description",
+                :content => score.item_level.descriptor,
                 }
+            %td= score.scored_at.strftime('%m/%d/%Y %H:%M:%S')
+
+  
+
+
