--- a/app/views/pgp_goals/new.html.haml
+++ b/app/views/pgp_goals/new.html.haml
@@ -1,5 +1,5 @@
 %h1 New pgp_goal
+= simple_form_for @pgp_goal, :url => pgp_goals_path do |f|
+    = render 'form'
 
-= render 'form'
-
-= link_to 'Back', pgp_goals_path
+= link_to 'Back', student_pgp_goals_path(@student.id)
