--- a/app/views/pgp_goals/show.html.haml
+++ b/app/views/pgp_goals/show.html.haml
@@ -12,4 +12,4 @@
 
 = link_to 'Edit', edit_pgp_goal_path(@pgp_goal)
 \|
-= link_to 'Back', pgp_goals_path
+= link_to 'Back', student_pgp_goals_path(@student.id)
