--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -459,6 +459,14 @@ form.button_to {
   border-color: inherit;
 }
 
+/* simple_form_for */
+
+div.actions, div.field { 
+  margin-bottom: 10px;
+}
+label {
+  display: block;
+}
 
 /* Errors */
 .field_with_errors { }
