--- a/app/views/pgp_goals/index.html.haml
+++ b/app/views/pgp_goals/index.html.haml
@@ -1,25 +1,28 @@
-%h1 Listing pgp_goals
+= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do
+  %i.link-text Back
 
-%table
-  %thead
-    %tr
-      %th Name
-      %th Domain
-      %th Active
-      %th
-      %th
-      %th
+.container-fluid
+  %table.listing.table.table-striped
+    %row
+      %caption
+        %span.header1="PGP Goals for #{@student.name_readable}"
+        %br/
+        .col-xs-1
+          = link_to new_student_pgp_goal_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do
+            %span.large-btn-text New PGP goal
 
-  %tbody
-    - @pgp_goals.each do |pgp_goal|
-      %tr
-        %td= pgp_goal.name
-        %td= pgp_goal.domain
-        %td= pgp_goal.active
-        %td= link_to 'Show', pgp_goal
-        %td= link_to 'Edit', edit_pgp_goal_path(pgp_goal)
-        %td= link_to 'Destroy', pgp_goal, :method => :delete, :data => { :confirm => 'Are you sure?' }
+    %thead
+      %tr.header
+        %th Name
+        %th Domain
 
-%br
-
-= link_to 'New Pgp goal', new_student_pgp_goal_path
+    %tbody
+      - @pgp_goals.each do |pgp_goal|
+        %tr{:class => ("inactive" unless pgp_goal.active?)}
+          %td
+            %span{:class => ("glyphicon glyphicon-eye-close" unless pgp_goal.active?)}
+            = pgp_goal.name
+          %td= pgp_goal.domain
+          %td
+            = link_to edit_pgp_goal_path(pgp_goal), :class => "btn btn-info action-small" do
+              %span.small-btn-text Edit
