implements edit for pgp_strategies

--- a/app/views/pgp_goals/_form.html.haml
+++ b/app/views/pgp_goals/_form.html.haml
@@ -5,7 +5,7 @@
   %th
     = f.label :name
   %td
-    = f.text_field :name
+    = f.text_field :name, size: 100
   %tr
     %th
       = f.label :domain
