--- a/app/views/pgp_strategies/_form.html.haml
+++ b/app/views/pgp_strategies/_form.html.haml
@@ -4,24 +4,24 @@
   %th
     = f.label :name
   %td
-    = f.text_field :name
+    = f.text_field :name, size: 100
   %tr
     %th
       = f.label :timeline
     %td
-      = f.text_area :timeline, :side => '40x10'
+      = f.text_area :timeline, :rows => 7, :cols => 100
 
   %tr
     %th
       = f.label :resources
     %td
-      = f.text_area :resources, :side => '40x10'
+      = f.text_area :resources, :rows => 7, :cols => 100
 
   %tr
     %th
       = f.label :active
     %td
       = f.check_box :active, checked: true
-  %tr
-    %th
-      = f.submit 'Save'
+
+%div
+  = f.submit 'Save', :class => "btn btn-info"
