added more clarifying language. also needed to change submit button

--- a/app/views/fois/index.html.erb
+++ b/app/views/fois/index.html.erb
@@ -8,7 +8,7 @@
         <div class="col-xs-1"><br>
           <%= form_tag import_fois_path, multipart: true do %>
             <%= file_field_tag :file %><br>
-            <%= submit_tag "Import CSV" %>
+            <%= submit_tag "Import Form of Intention" %>
           <% end %>
         </div>
       </caption>
