users didn't have the ability to completly destroy a record in the case of user error.
recomending that records that were once accurate and are simply not active be marked as 'inactive'.
records that were never meant to exist in the first place can be destroyed

--- a/app/views/pgp_goals/index.html.haml
+++ b/app/views/pgp_goals/index.html.haml
@@ -29,3 +29,6 @@
           %td
             = link_to edit_pgp_goal_path(pgp_goal), :class => "btn btn-info action-small" do
               %span.small-btn-text Edit
+          %td
+            = button_to("/pgp_goals/#{pgp_goal.id}", {:class => "btn btn-info btn-danger action-small", method: :delete, data: {confirm: "Are you sure you want to completly remove this goal? You can also deactivate the goal if you don't want to remove it completly."}}) do
+              %span.small-btn-text Destroy
